--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <script url="index.js" defer></script>
+  <script src="index.js" defer></script>
   <title>Calculator</title>
 </head>
 <body>
   <div id="calculator">
-    <div id="display"><span id="display-value">123456789</span></div>
+    <div id="display"><span id="display-value">0</span></div>
     <div id="keyboard">
-      <button class="key special" id="AC">AC</button>
-      <button class="key special" id="DEL">DEL</button>
+      <button class="key special" id="clear">AC</button>
+      <button class="key special" id="delete">DEL</button>
       <button class="key special" id="negate">&plusmn;</button>
       <button class="key operation" id="divide">&div;</button>
-      <button class="key" id="seven">7</button>
-      <button class="key" id="eight">8</button>
-      <button class="key" id="nine">9</button>
+      <button class="key number" id="seven">7</button>
+      <button class="key number" id="eight">8</button>
+      <button class="key number" id="nine">9</button>
       <button class="key operation" id="multiply">&times;</button>
-      <button class="key" id="four">4</button>
-      <button class="key" id="five">5</button>
-      <button class="key" id="six">6</button>
+      <button class="key number" id="four">4</button>
+      <button class="key number" id="five">5</button>
+      <button class="key number" id="six">6</button>
       <button class="key operation" id="subtract">&minus;</button>
-      <button class="key" id="one">1</button>
-      <button class="key" id="two">2</button>
-      <button class="key" id="three">3</button>
+      <button class="key number" id="one">1</button>
+      <button class="key number" id="two">2</button>
+      <button class="key number" id="three">3</button>
       <button class="key operation" id="add">&plus;</button>
-      <button class="key wide" id="zero">0</button>
-      <button class="key" id="decimal">.</button>
+      <button class="key number wide" id="zero">0</button>
+      <button class="key number" id="decimal">.</button>
       <button class="key operation" id="equals">=</button> 
     </div>
   </div>
